deploy/k8s/easymaid/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: easymaid
  labels:
    app.kubernetes.io/name: easymaid
    app.kubernetes.io/part-of: easy-maid-service
    app.kubernetes.io/component: mariadb
spec:
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app.kubernetes.io/name: easymaid
    app.kubernetes.io/component: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: easymaid
  labels:
    app.kubernetes.io/name: easymaid
    app.kubernetes.io/part-of: easy-maid-service
    app.kubernetes.io/component: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: easymaid
      app.kubernetes.io/component: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: easymaid
        app.kubernetes.io/component: mariadb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - node05
                - node06
      containers:
      - name: mariadb
        image: mariadb:10.11.18
        imagePullPolicy: IfNotPresent
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: "1"
            memory: 2Gi
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "mysqladmin ping -h 127.0.0.1 -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "mysqladmin ping -h 127.0.0.1 -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 30
          periodSeconds: 15
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        numberOfReplicas: "2"
      labels:
        app.kubernetes.io/name: easymaid
        app.kubernetes.io/component: mariadb
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
