deploy/k8s/easymaid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easymaid-ingress
  namespace: easymaid
  labels:
    app.kubernetes.io/name: easymaid
    app.kubernetes.io/part-of: easy-maid-service
    app.kubernetes.io/component: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-gzip-compress@kubernetescrd,traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - easymaid.trector.com
  rules:
  - host: easymaid.trector.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frappe-python
            port:
              number: 8000
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: frappe-socketio
            port:
              number: 9000
